# gen

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.old.md  bun.lockb  docker-compose.yml  dooby.txt  node-test.js  out.txt  package.json  poetry.toml  prompt.txt  pyproject.toml  test.js  tsconfig.json
.changeset/: curvy-socks-tease.md
_services/: demo.py
_services/inference/: .dockerignore  Dockerfile  __init__.py  pyproject.toml  run.sh
_services/inference/inference/api/: codet5.py  gpt3.py
_services/inference/inference/models/: gpt2.py
_services/inference/inference/schemas/: models.py
services/code_generator/: .env.example  README.md  code_generator.py  demo.py  prompts.py  pyproject.toml  run.sh  utils.py
services/code_generator/code_generator/: main.py
services/code_generator/code_generator/api/: routers.py
services/code_generator/code_generator/utils/: constants.py  models.py  prompts.py  utils.py
services/generator/: __init__.py  pyproject.toml
services/inference/: .env.example  README.md  demo.py  inference.py  main.py  pyproject.toml  run.sh  schemas.py
services/inference/inference/: __init__.py  main.py
services/inference/inference/api/: codet5.py  gpt3_turbo.py  gpt_ft.py  llama2.py
services/inference/inference/models/: codet5.py  gpt2.py  gpt3.py  gpt3_turbo.py  gpt_ft.py  llama2.py
services/inference/inference/schemas/: constants.py  models.py
services/inference/inference/tmp/: keys.py
services/inference/models/: codet5.py  gpt3_turbo.py  gpt_ft.py  llama2.py
services/inference/src/api/: _gpt2.py  _llama2.py  gpt3_turbo.py
services/inference/src/models/: _gpt3.py  gpt3_turbo.py
services/openfn_llama/: README.md  __init__.py  pyproject.toml  run.sh
services/openfn_llama/datasets/: msgraph.js
services/openfn_llama/datasets/adaptors/: adaptor_functions.json  adaptor_functions_instr.json  adaptor_functions_prompts.json  adaptors.json  adaptors.jsonl  dataset.jsonl  gpt_generated.jsonl
services/openfn_llama/datasets/processed_data/: test.json  train.jsonl
services/openfn_llama/datasets/rest_adaptors/asana/adaptors/: getTask.js  getTasks.js
services/openfn_llama/datasets/rest_adaptors/asana/signatures/: createTask.d.ts  execute.d.ts  getTask.d.ts  upsertTask.d.ts
services/openfn_llama/datasets/rest_adaptors/beyonic/adaptors/: createContact.js
services/openfn_llama/datasets/rest_adaptors/beyonic/signatures/: createCollectionRequest.d.ts  createPayment.d.ts
services/openfn_llama/datasets/rest_adaptors/cartodb/adaptors/: addRow.js  sql.js
services/openfn_llama/datasets/rest_adaptors/cartodb/signatures/: sql.d.ts
services/openfn_llama/datasets/rest_adaptors/commcare/adaptors/: execute.js  submitXls.js
services/openfn_llama/datasets/rest_adaptors/commcare/signatures/: submitXls.d.ts
services/openfn_llama/datasets/rest_adaptors/dhis2/adaptors/: destroy.js  update.js  upsert.js
services/openfn_llama/datasets/rest_adaptors/dhis2/signatures/: create.d.ts  upsert.d.ts
services/openfn_llama/datasets/rest_adaptors/dynamics/adaptors/: createEntity.js
services/openfn_llama/datasets/rest_adaptors/fhir/adaptors/: createTransactionBundle.js  getClaim.js
services/openfn_llama/datasets/rest_adaptors/fhir/signatures/: createTransactionBundle.d.ts  get.d.ts  getClaim.d.ts
services/openfn_llama/datasets/rest_adaptors/godata/adaptors/: execute.js  getContact.js  getLocation.js  getOutbreak.js  getReferenceData.js  listContacts.js  upsertCase.js  upsertReferenceData.js
services/openfn_llama/datasets/rest_adaptors/godata/signatures/: getCase.d.ts  getReferenceData.d.ts  listLocations.d.ts  listOutbreaks.d.ts  listReferenceData.d.ts  upsertCase.d.ts  upsertContact.d.ts  upsertReferenceData.d.ts
services/openfn_llama/datasets/rest_adaptors/googlehealthcare/adaptors/: createFhirResource.js
services/openfn_llama/datasets/rest_adaptors/googlehealthcare/signatures/: execute.d.ts
services/openfn_llama/datasets/rest_adaptors/khanacademy/adaptors/: execute.js  fetch.js
services/openfn_llama/datasets/rest_adaptors/khanacademy/signatures/: execute.d.ts  fetch.d.ts
services/openfn_llama/datasets/rest_adaptors/kobotoolbox/adaptors/: getDeploymentInfo.js  getForms.js  getSubmissions.js
services/openfn_llama/datasets/rest_adaptors/kobotoolbox/signatures/: getDeploymentInfo.d.ts  getSubmissions.d.ts
services/openfn_llama/datasets/rest_adaptors/msgraph/adaptors/: create.js  get.js  getDrive.js
services/openfn_llama/datasets/rest_adaptors/msgraph/signatures/: create.d.ts  get.d.ts  getDrive.d.ts
services/openfn_llama/datasets/rest_adaptors/openhim/adaptors/: encounter.js
services/openfn_llama/datasets/rest_tests/: del.js  del.test.js  getDrive.agent.js  getDrive.js  getDrive.test.js  post.test.js
services/openfn_llama/openfn_llama/: __init__.py  finetune.py  finetune_gptj.py  gpt_finetune.py  inference.py  llama2.py  main.py  preprocess.py
services/openfn_llama/openfn_llama/utils/: constants.py  fetch_adaptors.py  schemas.py  utils.py
services/openfn_models/: pyproject.toml
services/openfn_models/data/: dhis2.js
services/openfn_models/openfn_models/: data_preprocessing.py  inference.py  model_finetuning.py
services/signature_generator/: README.md  __init__.py  demo.py  pyproject.toml  run.sh  signature_generator.py  utils.py
services/signature_generator/signature_generator/: main.py
services/signature_generator/signature_generator/api/: routers.py
services/signature_generator/signature_generator/utils/: constants.py  models.py  prompts.py  utils.py
services/signature_generator/src/: models.py  utils.py
(+213 files in other folders)
