[tool.poetry]
name = "code-generator"
version = "0.1.0"
description = "A python microservice for AI code generation"
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
license = "LGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
