[tool.poetry]
name = "inference"
version = "0.1.0"
description = ""
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.34.1"
torch = "^2.1.0"
openai = "^1.2.4"
fastapi = "^0.104.1"
pydantic = "1.10.11"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.1"
pre-commit = "^3.5.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
