[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.1"
pre-commit = "^3.5.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
