[tool.poetry]
name = "openfn-llama"
version = "0.1.0"
description = ""
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.35.2"
torch = "^2.1.1"
bitsandbytes = "^0.41.2.post2"
datasets = "^2.15.0"
peft = "^0.6.2"
scipy = "^1.11.4"
trl = "^0.7.4"
scikit-learn = "^1.3.2"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"
openai = "0.28"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
