[tool.poetry]
name = "openfn-models"
version = "0.1.0"
description = ""
authors = ["optimization team <i.sadou@oxolo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.35.2"
torch = "^2.1.1"
bitsandbytes = "^0.41.2.post2"
datasets = "^2.15.0"
peft = "^0.6.2"
scipy = "^1.11.4"
trl = "^0.7.4"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
