[tool.poetry]
name = "signature-generator"
version = "0.1.0"
description = ""
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.104.0"
spacy = "^3.7.2"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.3"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
